------------------------------------
           VERSION 3.3.0
------------------------------------

Features & Enhancements:
* Performance improvements when running JSF 2.0 in project stage 'development'

Bugfixes:
* Fixed bug that caused path parameter validators to be ignored (#102)
* Handle java.lang.ClassFormatError during initialization of bean name resolvers (#101)

------------------------------------
           VERSION 3.2.1
------------------------------------

Features & Enhancements:
* Use JSF converters for path and query parameter conversion.
* Now bundles shaded apache commons libs, and requires no dependencies.

Bugfixes:
* Fixed incorrect encoding of URLs when using the 'url' attribute for rewrite rules (#91)
* MultiPageMessagesSupport doesn't duplicate messages any more if using MyFaces (#89)
* Fixed potential NullPointerExceptions on FacesContext access
* Ignore query parameters that are not correctly encoded (#88)
* Fixed BeanManager JNDI lookup for Weld 1.1.0 + Tomcat enviroments
* Correctly handle $ characters as path parameters


------------------------------------
           VERSION 3.2.0
------------------------------------

Major Changes:
* PrettyFaces is now licensed under the Apache Software License v2.0 (http://www.apache.org/licenses/LICENSE-2.0.html)
* Added 'parentId' for Hierarchical Mappings in pretty-config.xml (#72)
* Can now be run in a pure servlet environment (without JSF and related JARs)

Features & Enhancements:
* Added 'onPostback' configuration parameter for query parameters (#24)
* Added code-completion support for Eclipse Helios
* Added 'pretty:location' client behavior 
* Added 'onPostback' configuration parameter for path parameters (#24)
* New method PrettyContext.sendError() to send custom HTTP status codes (#66)
* Added SPI hooks for ConfigurationProvider and ConfigurationPostProcessor
* New @URLMappings annotation to declare multiple mappings on a single class

Regression Impact: